Bug 1724808. Take into account ancestor documents in other processes' resolution when pre-decoding images. r=hiro

Depends on D122212

Differential Revision: https://phabricator.services.mozilla.com/D122213